--- a/config/options.ini
+++ b/config/options.ini
@@ -46,7 +46,7 @@ DevIDs =
 [Chat]
 # Determines the prefix that must be used before commands in the Discord chat.
 # e.g if you set this to *, the play command would be triggered using *play.
-CommandPrefix = 1
+CommandPrefix = D
 
 # Restricts the bot to only listening to certain text channels. To use this, add
 # the IDs of the text channels you would like the bot to listen to, seperated by
@@ -63,7 +63,7 @@ AllowUnboundServers = no
 # of the voice channels you would like the bot to join on startup, seperated by a
 # space. Each server can have one channel. If this option and AutoSummon are
 # enabled, this option will take priority.
-AutojoinChannels = 518843490109751316
+AutojoinChannels = 545681710751154177
 
 [MusicBot]
 # The volume of the bot, between 0.01 and 1.0.
@@ -122,7 +122,7 @@ DebugLevel = INFO
 
 # Specify a custom message to use as the bot's status. If left empty, the bot
 # will display dynamic info about music currently being played in its status instead.
-StatusMessage = Type 1play
+StatusMessage = Type Dplay
 
 # Write what the bot is currently playing to the data/<server id>/current.txt FILE.
 # This can then be used with OBS and anything else that takes a dynamic input.
